--- a/Client/public/styles.css
+++ b/Client/public/styles.css
@@ -31,8 +31,8 @@
 }
 
 .vertical-scroll-topClick {
-  height: 32px;
-  width:70px;
+  height: 70px;
+  width:32px;
   border: none;
   background-color: white;
   outline: 0;
